--- a/TiendaAngular/package.json
+++ b/TiendaAngular/package.json
@@ -11,20 +11,27 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.0.2",
-    "@angular/common": "^6.0.2",
-    "@angular/compiler": "^6.0.2",
-    "@angular/core": "^6.0.2",
-    "@angular/forms": "^6.0.2",
-    "@angular/http": "^6.0.2",
-    "@angular/platform-browser": "^6.0.2",
-    "@angular/platform-browser-dynamic": "^6.0.2",
-    "@angular/router": "^6.0.2",
+    "@angular/animations": "^6.0.4",
+    "@angular/common": "^6.0.4",
+    "@angular/compiler": "^6.0.4",
+    "@angular/core": "^6.0.4",
+    "@angular/forms": "^6.0.4",
+    "@angular/http": "^6.0.4",
+    "@angular/platform-browser": "^6.0.4",
+    "@angular/platform-browser-dynamic": "^6.0.4",
+    "@angular/router": "^6.0.4",
+    "angular2-flash-messages": "^2.0.5",
+    "angularfire2": "^5.0.0-rc.8.1-next",
     "bootstrap": "^4.1.1",
-    "core-js": "^2.5.4",
+    "bootswatch": "^4.1.1",
+    "core-js": "^2.5.7",
+    "firebase": "^5.0.4",
     "font-awesome": "^4.7.0",
-    "rxjs": "^6.0.0",
-    "zone.js": "^0.8.26"
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.3",
+    "rxjs": "^6.2.0",
+    "rxjs-compat": "^6.0.0-rc.0",
+    "zone.js": "^0.8.19"
   },
   "devDependencies": {
     "@angular/compiler-cli": "^6.0.2",
