--- a/TiendaAngular/package.json
+++ b/TiendaAngular/package.json
@@ -28,6 +28,7 @@
     "firebase": "^5.0.4",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
+    "npm": "^6.4.1",
     "popper.js": "^1.14.3",
     "rxjs": "^6.2.0",
     "rxjs-compat": "^6.0.0-rc.0",
